--- a/TP2/EntregaFinal/style.css
+++ b/TP2/EntregaFinal/style.css
@@ -63,17 +63,23 @@
   padding: 0;
   margin: 0;
   font-family: inherit;
+  color: inherit;
 }
 
 html:focus-within {
   scroll-behavior: smooth;
 }
 
+
 img,
 picture,
 svg {
   max-width: 100%;
   display: block;
+}
+
+input {
+  border-style: none;
 }
 
 @media (prefers-reduced-motion: reduce) {
@@ -99,12 +105,13 @@ body {
   font-size: var(--fs-body);
   color: var(--clr-black);
 
-  min-height: 100vh;
-  min-height: 100dvh;
-
   display: grid;
-  place-items: center;
-  gap: 1rem;
+  grid-template-columns: 1rem [content-start] auto [content-end] 1rem;
+
+  > * {
+    grid-column: content;
+  }
+
 }
 
 h1,
@@ -119,6 +126,37 @@ p,
 li {
   text-wrap: pretty;
 }
+
+
+body > header{
+  display: flex;
+  align-items: center;
+
+  > :is(:first-child,:last-child){
+    flex-grow: 1;
+    flex-basis: 0;
+  }
+
+  > :last-child{
+    justify-content: end;
+  }
+
+  .aside{
+    display: flex;
+    align-items: center;
+    gap: 30px;
+
+    .logo{
+      color: var(--clr-primary-dark-3);
+
+      &:hover{
+        color: var(--clr-primary);
+      }
+    }
+  }
+
+}
+
 
 
 .btn {
@@ -142,7 +180,7 @@ li {
     box-shadow: inset 0 -2px 0 0px var(--_stroke, var(--clr-black));
   }
 
-  &:focus-visible{
+  &:focus-visible {
     outline: 2px solid var(--_stroke, var(--clr-black));
   }
 
@@ -180,4 +218,111 @@ li {
   --_background-active: var(--clr-secondary-light-1);
   --_text: var(--clr-black);
   --_stroke: var(--clr-secondary);
+}
+
+label[role="group"] {
+  display: grid;
+  gap: 4px;
+  color: var(--clr-secondary-dark-3);
+  max-width: 240px;
+
+  &:has(> [required]) p::after {
+    content: '*';
+    color: var(--clr-primary);
+    margin-inline: 4px;
+  }
+
+  input[type="text"] {
+    width: 100%;
+    padding: 10px;
+    border-radius: 12px;
+    background-color: var(--clr-white);
+    border: 1px solid var(--clr-free);
+    font-size: var(--fs-min);
+    color: var(--clr-black);
+
+    &::placeholder {
+      color: var(--clr-secondary-dark-1);
+      font-size: var(--fs-min);
+    }
+
+    &:focus-visible {
+      outline: none;
+      background-color: var(--clr-free);
+    }
+  }
+}
+
+[role="searchbox"],
+[role="form"] {
+  width: 450px;
+  display: grid;
+  grid-template-areas: "stack";
+  align-items: center;
+
+  >* {
+    grid-area: stack;
+  }
+
+
+
+  input[type="text"] {
+    background-color: var(--clr-secondary-light-1);
+    width: 100%;
+    padding: 12px;
+    padding-right: calc(12px + 22px);
+    caret-color: var(--clr-primary);
+    color: var(--clr-black);
+    border-radius: 15px;
+
+    &:focus-visible {
+      outline: none;
+      background-color: var(--clr-secondary);
+    }
+
+    &::placeholder {
+      color: var(--clr-secondary-dark-3);
+    }
+  }
+
+  button {
+    border: none;
+    background-color: transparent;
+    justify-self: end;
+    width: fit-content;
+    margin-right: 10px;
+
+    &:hover,
+    &:focus {
+      background-color: var(--clr-primary-light);
+      outline: none;
+
+      & svg {
+        color: var(--clr-primary);
+        animation: shake .35s ease-in;
+        animation-iteration-count: 2;
+        animation-delay: .1s;
+      }
+    }
+  }
+
+  svg {
+    color: var(--clr-primary-dark-3);
+    transform-origin: bottom right;
+  }
+
+
+}
+
+@keyframes shake {
+
+  0%,
+  75%,
+  100% {
+    rotate: 0deg;
+  }
+
+  25% {
+    rotate: 10deg;
+  }
 }
