--- a/TP2/EntregaFinal/css/button.css
+++ b/TP2/EntregaFinal/css/button.css
@@ -1,5 +1,7 @@
 .btn {
   border-style: none;
+  width: fit-content;
+  height: fit-content;
 
   display: flex;
   justify-content: center;
@@ -16,11 +18,17 @@
 
   cursor: pointer;
 
+  > *{
+    transition: translate .2s ease-out;
+  }
+
   &:hover,
   &:focus-visible {
     outline: none;
     background-color: var(--_background-hover, var(--clr-free));
     box-shadow: inset 0 -2px 0 0px var(--_stroke, var(--clr-black));
+
+
   }
 
   &:focus-visible {
@@ -36,6 +44,9 @@
     background-color: var(--_background-active, black);
     box-shadow: none;
     scale: .98;
+    > * {
+      translate: 0 2.5px;
+    }
   }
 }
 
