--- a/TP2/EntregaFinal/css/index.css
+++ b/TP2/EntregaFinal/css/index.css
@@ -60,6 +60,32 @@ input {
   }
 }
 
+.content-grid,
+.full-width{
+
+  
+  --_padding-inline : 1rem;
+  --_content-max-width : 1300px;
+
+  --content-size: min(100% - (var(--_padding-inline) * 2), var(--_content-max-width), 100vw);
+  --full-width-size : minmax(var(--_padding-inline), auto );
+
+  display: grid;
+  grid-template-columns:
+  [full-width-start] 
+  var(--full-width-size)
+  [content-start] var(--content-size) [content-end]  
+
+  var(--full-width-size)
+  [full-width-end]
+  ;
+}
+
+.content-grid > *, .full-width > *{
+  grid-column: content;
+}
+
+
 body {
   background-color: var(--clr-secondary-light-3);
 
@@ -67,14 +93,12 @@ body {
 
   font-size: var(--fs-body);
   color: var(--clr-black);
+  min-height: 100vh;
+  min-height: 100dvh;
+
 
   display: grid;
-  --_padding-inline: 3rem;
-  grid-template-columns: var(--_padding-inline) [content-start] auto [content-end] var(--_padding-inline);
-
-  > * {
-    grid-column: content;
-  }
+  grid-template-rows: [header-start] auto [header-end main-start] 1fr [main-end footer-start] auto [footer-end];
 
 }
 
