--- a/TP2/EntregaFinal/css/index.css
+++ b/TP2/EntregaFinal/css/index.css
@@ -4,6 +4,8 @@
 @import url(card.css);
 @import url(button.css);
 @import url(form.css);
+@import url(avatar.css);
+@import url(footer.css);
 
 .stack{
   display: grid;
@@ -41,6 +43,17 @@ svg {
   display: block;
 }
 
+img{
+  height: auto;
+  vertical-align: middle;
+  font-style: italic;
+  shape-margin: 1rem;
+}
+
+[role="list"]{
+  list-style: none;
+}
+
 input {
   border-style: none;
 }
@@ -64,7 +77,7 @@ input {
 .full-width{
 
   
-  --_padding-inline : 1rem;
+  --_padding-inline : 50px;
   --_content-max-width : 1300px;
 
   --content-size: min(100% - (var(--_padding-inline) * 2), var(--_content-max-width), 100vw);
