--- a/TP2/EntregaFinal/css/badge.css
+++ b/TP2/EntregaFinal/css/badge.css
@@ -1,56 +1,70 @@
-span.price{
-  padding-inline: 10px;
-  padding-block: 5px;
-  background-color: var(--_bkg-clr, red);
-  color: var(--_clr, blue);
-  border-radius: 12px;
-  box-shadow: 0 4px 4px rgba(0, 0, 0, 75%);
-  position: absolute;
-  right: 8px;
-  bottom: 8px;
-
-  z-index: 0;
+span.price {
+  background-color: var(--clr-secondary);
+  font-weight: var(--fw-bold);
   width: fit-content;
+  padding: 4px 8px;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  user-select: none;
+}
 
-  &.cost{
-    --_bkg-clr : var(--clr-price);
-    --_clr : var(--clr-white);
-    border: 1px solid var(--clr-white);
-    cursor: pointer;
+.price-cart-container{
+  display: flex;
+  align-items: stretch;
+  justify-content: space-between;
+}
 
-    &:hover,&:focus-within{
-      --_bkg-clr : var(--clr-accent);
+.add-to-cart{
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  border: 2px solid var(--clr-green);
+  border-radius: 10px;
+  padding: 4px 8px;
+  color: var(--clr-green);
+  cursor: pointer;
+
+  &:hover,&:focus-visible{
+    filter: brightness(1.2);
+  }
+
+  > input[type="checkbox"]{
+    display: none;
+    visibility: none;
+  }
+
+  > .plus{
+    display: block;
+  }
+
+  > .check{
+    display: none;
+  }
+
+  &:has(input:checked){
+    background-color: var(--clr-green);
+    color: var(--clr-white);
+
+    > .plus{
+      display: none;
+    }
+
+    > .check{
+      display: block;
     }
   }
-
-  &.free{
-    --_bkg-clr : var(--clr-free);
-    --_clr : var(--clr-black);
-    pointer-events: none;
-  }
 }
 
-.trend-badge,
-.discount-badge{
-position: absolute;
-box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
-}
 
-.trend-badge{
-top: -5px;
-right: 15px;
-background-color: var(--clr-trend);
-color: var(--clr-white);
-padding-block: 10px;
-padding-inline: 8px;
-}
-
-.discount-badge{
-
-left: 0;
-top: 20px;
-background-color: var(--clr-discount);
-color: rgba(0, 0, 0, 50%);
-font-size: var(--fs-min);
-padding: 5px;
+.trend-badge {
+  position: absolute;
+  box-shadow: 0 4px 4px rgba(0, 0, 0, 25%);
+  top: -5px;
+  right: 15px;
+  background-color: var(--clr-trend);
+  color: var(--clr-white);
+  padding-block: 10px;
+  padding-inline: 8px;
+  border-radius: 5px;
 }
