--- a/TP2/EntregaFinal/css/index.css
+++ b/TP2/EntregaFinal/css/index.css
@@ -6,6 +6,7 @@
 @import url(form.css);
 @import url(avatar.css);
 @import url(footer.css);
+@import url(toggle-menu.css);
 
 .stack{
   display: grid;
