--- a/TP2/EntregaFinal/css/index.css
+++ b/TP2/EntregaFinal/css/index.css
@@ -7,8 +7,11 @@
 @import url(avatar.css);
 @import url(footer.css);
 @import url(toggle-menu.css);
+@import url(comment.css);
+@import url(game-container.css);
 
-.stack{
+
+.stack {
   display: grid;
   grid-template-areas: "stack";
   align-items: center;
@@ -44,14 +47,14 @@ svg {
   display: block;
 }
 
-img{
+img {
   height: auto;
   vertical-align: middle;
   font-style: italic;
   shape-margin: 1rem;
 }
 
-[role="list"]{
+[role="list"] {
   list-style: none;
 }
 
@@ -74,33 +77,28 @@ input {
   }
 }
 
-::selection{
+::selection {
   background-color: var(--clr-primary);
   color: var(--clr-white);
 }
 
 .content-grid,
-.full-width{
+.full-width {
 
-  
-  --_padding-inline : 50px;
-  --_content-max-width : 1300px;
+
+  --_padding-inline: 50px;
+  --_content-max-width: 1300px;
 
   --content-size: min(100% - (var(--_padding-inline) * 2), var(--_content-max-width), 100vw);
-  --full-width-size : minmax(var(--_padding-inline), auto );
+  --full-width-size: minmax(var(--_padding-inline), auto);
 
   display: grid;
   grid-template-columns:
-  [full-width-start] 
-  var(--full-width-size)
-  [content-start] var(--content-size) [content-end]  
-
-  var(--full-width-size)
-  [full-width-end]
-  ;
+    [full-width-start] var(--full-width-size) [content-start] var(--content-size) [content-end] var(--full-width-size) [full-width-end];
 }
 
-.content-grid > *, .full-width > *{
+.content-grid>*,
+.full-width>* {
   grid-column: content;
 }
 
@@ -129,27 +127,27 @@ h5 {
   text-wrap: balance;
 }
 
-h5{
+h5 {
   font-weight: var(--fw-bold);
   font-size: var(--fs-h5);
 }
 
-h4{
+h4 {
   font-weight: var(--fw-bold);
   font-size: var(--fs-h4);
 }
 
-h3{
+h3 {
   font-weight: var(--fw-bold);
   font-size: var(--fs-h3);
 }
 
-h2{
+h2 {
   font-weight: var(--fw-black);
   font-size: var(--fs-h2);
 }
 
-h1{
+h1 {
   font-weight: var(--fw-black);
   font-size: var(--fs-h1);
 }
@@ -159,6 +157,26 @@ li {
   text-wrap: pretty;
 }
 
-.bold{
+p {
+  line-height: calc(var(--fs-body) * 1.5);
+}
+
+.bold {
   font-weight: var(--fw-bold);
+}
+
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--clr-secondary-light-3);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--clr-secondary-dark-1);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--clr-secondary-dark-3);
 }
