--- a/TP2/EntregaFinal/css/index.css
+++ b/TP2/EntregaFinal/css/index.css
@@ -9,6 +9,7 @@
 @import url(toggle-menu.css);
 @import url(comment.css);
 @import url(game-container.css);
+@import url(carousel.css);
 
 
 .stack {
