--- a/TP2/EntregaFinal/css/root.css
+++ b/TP2/EntregaFinal/css/root.css
@@ -20,7 +20,7 @@
   --clr-secondary-dark-2: #A68F5D;
   --clr-secondary-dark-3: #88714E;
 
-  --clr-accent: #1EB5C6;
+  --clr-accent: #008492;
 
 
 
