--- a/TP2/EntregaFinal/css/toggle-menu.css
+++ b/TP2/EntregaFinal/css/toggle-menu.css
@@ -54,7 +54,7 @@ details.menu{
 
 
     > li > *{
-      cursor: default;
+      cursor: pointer;
       width: 100%;
       display: flex;
       align-items: center;
